--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">android-my_favorites</string>
+    <string name="app_name">My Favorites</string>
+    <string name="menu_all">Todas as Clinicas</string>
+    <string name="menu_favorites">Favoritas</string>
+    <string name="search">Pesquisar</string>
 </resources>
