--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="menu_all">Todas as Clinicas</string>
     <string name="menu_favorites">Favoritas</string>
     <string name="search">Pesquisar</string>
+    <string name="welcome">Bem vindo!</string>
+    <string name="nome_fantasia">Nome Fantasia</string>
+    <string name="logo">Logo</string>
+    <string name="not_found">Nada encontrado.</string>
 </resources>
