--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="nome_fantasia">Nome Fantasia</string>
     <string name="logo">Logo</string>
     <string name="not_found">Nada encontrado.</string>
+    <string name="descricao">Descrição: </string>
+    <string name="beneficios">Benefícios: </string>
+    <string name="segmentos">Segmentos: </string>
+    <string name="telefone">Telefone: </string>
+    <string name="endereco">Endereço: </string>
+    <string name="menu_activity">Nova janela</string>
+    <string name="favorite" />
 </resources>
